[metadata]
name = mapology
version = 2022.4.6
description = Simple python filters generating leaflet driven apps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sthagen/mapology
author = Stefan Hagen
author_email = stefan@hagen.link

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
install_requires =
packages = find:

[options.entry_points]
console_scripts =
    mapology = mapology.cli:main

[options.package_data]
mapology =
	index_template.html
	page_template.html
	prefix_template.html

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = tests
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 15
inline-quotes = '
multiline-quotes = """
ignore = E203, W503

[coverage:run]
branch = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py

[isort]
line_length=120
known_first_party=mapology
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[mypy]
strict = True
