[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = Simple python filters generating leaflet driven apps.
home_page = https://git.sr.ht/~sthagen/mapology

keywords =
    data-quality
    developer-tools
    gis
    mapping-tools

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = mapology

project_urls =
    Bug Tracker = https://todo.sr.ht/~sthagen/mapology
    Documentation = https://codes.dilettant.life/docs/mapology
    Source Code = https://git.sr.ht/~sthagen/mapology
    Test Coverage = https://codes.dilettant.life/coverage/mapology

url = https://git.sr.ht/~sthagen/mapology
version = 2022.8.7

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
install_requires =
packages = find:

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    mapology = mapology.cli:main

[options.package_data]
mapology =
    airport_page_template.html
    country_index_template.html
    country_page_template.html
    ndb_index_template.html
    prefix_index_template.html
    prefix_page_template.html
    search_index_template.html

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = test
filterwarnings = error

[coverage:run]
branch = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py

[isort]
line_length=120
known_first_party=mapology
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[mypy]
strict = True

[flake8]
max-line-length = 120
max-complexity = 15
ignore = E203, W503
inline-quotes = '
multiline-quotes = """
